# Genotek

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  endpoints.py
backend/app/api/endpoints/: __init__.py  basic_checks.py  family_tree.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  person.py
backend/app/services/: __init__.py  graph_service.py  mongodb_service.py
backend/tests/: __init__.py
backend_django/: README.md  db.sqlite3  manage.py  requirements.txt
backend_django/genotek/: asgi.py  settings.py  urls.py  wsgi.py
backend_django/genotek/api/: __init__.py  apps.py  models.py  serializers.py  services.py  views.py
backend_django/genotek/api/migrations/: 0001_initial.py  0002_basicchecks_person_middle_name_person_surname.py  0003_delete_basicchecks_delete_person.py
backend_django/genotek/core/: services.py
data/: haystack_test.json
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: FamilyTreeD3.js
frontend/src/components/common/: StyledComponents.js
frontend/src/components/layout/: MainLayout.js
frontend/src/components/modals/: UploadTreeModal.js
frontend/src/components/tree/: TreeVisualization.js
frontend/src/pages/: AnomalyAnalysis.js  Home.js  Reports.js  TreeCheck.js  TreeView.js  TreesList.js
frontend/src/theme/: GlobalStyles.js  index.js
