[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genotek"
version = "0.1.0"
description = "Anomaly tree detection task"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3 